turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var x=rule(state)(getCouleurSol())(0)
                                 ^Turmite:18: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var y=rule(state)(getCouleurSol())(1)
                                 ^Turmite:19: error: type mismatch;
 found   : java.awt.Color
 required: Int
  var z=rule(state)(getCouleurSol())(2)
                                 ^